--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+blogly_blog:
+   path: /blog
+   controller: App\Controller\BlogController::index
