--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
-blogly_blog:
-   path: /blog
-   controller: App\Controller\BlogController::index
+# blogly_blog:
+#    path: /blog
+#    controller: App\Controller\BlogController::index
